
	* config.c: new options "includeif" to include only if file exists
	  (implemented according to runtime configuration by Ron Norman)

2015-05-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c, cobc.h: bug #135 - give correct error position
	  (cb_source_file + new cb_exp_line) for expression errors

2015-04-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_initialize): bug #84 check target for INITIALIZE,
	  almost fixed as suggested by Edward Hard

2015-04-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.c: load configuration file from COB_CONFIG_DIR if file cannot be
	  accessed in current directory, only check for missing definitions if
	  configuration file loaded without errors

2015-04-02  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: set FORMATTED-CURRENT-DATE, INTEGER-OF-FORMATTED-DATE, and
	  TEST-FORMATTED-DATETIME and INTEGER-OF-FORMATTED-DATE to implemented

2015-04-02  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c: replaced "MSC_VER >= 1400" with COB_USE_VC2005_OR_GREATER

2015-03-10  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* config.c: support for multiple inclusion of conf files while
	  checking for recursion

2015-03-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: added more checks of overlapping MOVE,
	  generate MOVEs as overlapping if it's not sure it isn't

2015-03-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: added check of recursive CALL for INITIAL programs

2015-01-31  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c: updated valid_time_format and valid_datetime_format to pass
	  decimal points

2015-01-16  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: set TEST-FORMATTED-DATETIME and INTEGER-OF-FORMATTED-DATE
	  to implemented

2015-01-06  Brian Tiffin <btiffin@users.sf.net>

	* parser.y: fixed segfault with STOP "literal" with the ACCEPT OMITTED