@@ -1064,6 +1064,12 @@
 	* parser.y, typeck.c, cobc.h: bug #135 - give correct error position
 	  (cb_source_file + new cb_exp_line) for expression errors
 
+2015-04-28  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c now emits extern <function prototype> ();
+	  for each subroutine called statically to avoid 
+	  C compiler warnings
+
 2015-04-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (cb_emit_initialize): bug #84 check target for INITIALIZE,
